testing/runner/tests/snapshot_tests/joins/snapshots/joins__cross-join-explicit.snap
---
source: joins.sqltest
expression: "SELECT\n        c.name AS customer_name,\n        p.name AS product_name,\n        p.price\n    FROM\n        customers c\n    CROSS JOIN products p;"
info:
  statement_type: SELECT
  tables:
    - customers
    - products
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN


BYTECODE
