testing/runner/tests/snapshot_tests/joins/snapshots/joins__cross-join-implicit.snap
---
source: joins.sqltest
expression: "SELECT\n        c.name AS customer_name,\n        p.name AS product_name,\n        p.price\n    FROM\n        customers c,\n        products p;"
info:
  statement_type: SELECT
  tables:
    - customers
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN
|--SCAN customers AS c
`--SCAN products AS p

BYTECODE
addr  opcode         p1  p2  p3  p4              p5  comment
   0  Init            0  12   0                   0  Start at 12
   1  OpenRead        0   2   0  k(5,B,B,B,B,B)   0  table=customers, root=2, iDb=0
   2  OpenRead        1   3   0  k(5,B,B,B,B,B)   0  table=products, root=3, iDb=0
   3  Rewind          0  11   0                   0  Rewind table customers
   4    Rewind        1  10   0                   0  Rewind table products
   5      Column      0   1   1                   0  r[1]=customers.name
   6      Column      1   1   2                   0  r[2]=products.name
   7      Column      1   3   3                   0  r[3]=products.price
   8      ResultRow   1   3   0                   0  output=r[1..3]
   9    Next          1   5   0                   0
  10  Next            0   4   0                   0
  11  Halt            0   0   0                   0
  12  Transaction     0   1  10                   0  iDb=0 tx_mode=Read
  13  Goto            0   1   0                   0
