testing/runner/tests/snapshot_tests/joins/snapshots/joins__four-table-join-with-aggregation.snap
---
source: joins.sqltest
expression: |-
  SELECT
          c.name AS customer_name,
          c.city,
          COUNT(DISTINCT o.order_id) AS order_count,
          SUM(oi.quantity * oi.unit_price) AS total_spent
      FROM
          customers c
      INNER JOIN orders o ON c.customer_id = o.customer_id
      INNER JOIN order_items oi ON o.order_id = oi.order_id
      INNER JOIN products p ON oi.product_id = p.product_id
      WHERE
          p.category = 'Electronics'
      GROUP BY
          c.customer_id, c.name, c.city
      ORDER BY
          total_spent DESC;
info:
  statement_type: SELECT
  tables:
  - c.customer_id
  - customers
  - o.order_id
  - oi.product_id
  - order_items
  - orders
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN products AS p
|--SEARCH oi USING INDEX idx_order_items_product_id (product_id=?)
|--SEARCH o USING INTEGER PRIMARY KEY (rowid=?)
|--SEARCH c USING INTEGER PRIMARY KEY (rowid=?)
|--USE SORTER FOR GROUP BY
|--USE HASH TABLE FOR count(DISTINCT)
`--USE SORTER FOR ORDER BY
