testing/runner/tests/snapshot_tests/joins/snapshots/joins__index-assisted-join-product-lookup.snap
---
source: joins.sqltest
expression: |-
  SELECT
          p.name AS product_name,
          p.category,
          oi.quantity,
          o.order_date,
          c.name AS customer_name
      FROM
          products p
      INNER JOIN order_items oi ON p.product_id = oi.product_id
      INNER JOIN orders o ON oi.order_id = o.order_id
      INNER JOIN customers c ON o.customer_id = c.customer_id
      WHERE
          p.product_id = 500;
info:
  statement_type: SELECT
  tables:
  - customers
  - o.customer_id
  - oi.order_id
  - order_items
  - orders
  - p.product_id
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SEARCH p USING INTEGER PRIMARY KEY (rowid=?)
|--SEARCH oi USING INDEX idx_order_items_product_id
|--SEARCH o USING INTEGER PRIMARY KEY (rowid=?)
`--SEARCH c USING INTEGER PRIMARY KEY (rowid=?)

BYTECODE
addr  opcode           p1  p2  p3  p4              p5  comment
   0  Init              0  23   0                   0  Start at 23
   1  OpenRead          0   3   0  k(5,B,B,B,B,B)   0  table=products, root=3, iDb=0
   2  OpenRead          1   5   0  k(5,B,B,B,B,B)   0  table=order_items, root=5, iDb=0
   3  OpenRead          2  10   0  k(2,B)           0  index=idx_order_items_product_id, root=10, iDb=0
   4  OpenRead          3   4   0  k(5,B,B,B,B,B)   0  table=orders, root=4, iDb=0
   5  OpenRead          4   2   0  k(5,B,B,B,B,B)   0  table=customers, root=2, iDb=0
   6  SeekRowid         0   6  22                   0  if (r[6]!=cursor 0 for table products.rowid) goto 22
   7  RowId             0   7   0                   0  r[7]=products.rowid
   8  SeekGE            2  22   7                   0  key=[7..7]
   9    IdxGT           2  22   7                   0  key=[7..7]
  10    DeferredSeek    2   1   0                   0
  11    Column          1   1   8                   0  r[8]=order_items.order_id
  12    SeekRowid       3   8  21                   0  if (r[8]!=cursor 3 for table orders.rowid) goto 21
  13    Column          3   1   9                   0  r[9]=orders.customer_id
  14    SeekRowid       4   9  21                   0  if (r[9]!=cursor 4 for table customers.rowid) goto 21
  15    Column          0   1   1                   0  r[1]=products.name
  16    Column          0   2   2                   0  r[2]=products.category
  17    Column          1   3   3                   0  r[3]=order_items.quantity
  18    Column          3   2   4                   0  r[4]=orders.order_date
  19    Column          4   1   5                   0  r[5]=customers.name
  20    ResultRow       1   5   0                   0  output=r[1..5]
  21  Next              2   9   0                   0
  22  Halt              0   0   0                   0
  23  Transaction       0   1  10                   0  iDb=0 tx_mode=Read
  24  Integer         500   6   0                   0  r[6]=500
  25  Goto              0   1   0                   0
